--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,11 +90,22 @@ button:disabled {
 }
 
 .chat__sidebar {
-    height: 100vh;
+    height: 90vh;
     color: white;
     background: #333744;
     width: 225px;
     overflow-y: scroll
+}
+
+.ctrl__buttons {
+    background: #333744;
+    /* flex-grow: 1; */
+    display: block;
+    flex-direction: row;
+    height: 10vh;
+    width:100%;
+    /* min-height: 0; */
+    padding: 8px;
 }
 
 /* Chat styles */
@@ -103,7 +114,7 @@ button:disabled {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    max-height: 100vh;
+    max-height: 90vh;
 }
 
 .chat__messages {
